--- a/scss/pages/_index.scss
+++ b/scss/pages/_index.scss
@@ -1,6 +1,8 @@
 body{
     background-color: $colorAdd_main;
+    position: relative;
 }
+
 
 .citySelection{
     background-color: $colorAdd_dark;
