--- a/scss/base/_fonts.scss
+++ b/scss/base/_fonts.scss
@@ -6,7 +6,7 @@
 //Associations par défaut des polices
 
  
-h1, .logoFont{
+h1, .logoFont, .loader__text{
     font-family: 'Shrikhand', cursive, Arial, Helvetica, sans-serif;
     font-weight: initial;
 }
@@ -41,4 +41,9 @@ li{
 
 .logoFont{
     font-size: 1.2rem;
+}
+ 
+.loader__text{
+    font-size: 1.5rem;
+    letter-spacing: -0.15rem;
 }
