--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -20,6 +20,7 @@
         font-size: 1rem;
         &:hover{
             background: linear-gradient(355deg, lighten($colorPrimary,4%),lighten($colorSecondary,2%));
+            cursor: pointer;
         }
     }
 
@@ -73,7 +74,7 @@
 //! Voir pour ajouter des transitions sur les boutons au hover
 
 
-//* Bouton Like : start -----------------------------------
+//* Bouton Like-----------------------------------
 .icon__heart{
     width: 25px;
     height: 25px;
@@ -107,60 +108,6 @@
     }  
 }
 
-@keyframes fill-heart{
 
-    0%
-    {
-        fill-opacity: 0%;
-    }
-    
-    30%
-    {
-        stroke-width: 0;
-    }
 
-    40%
-    {
-        fill: url(#heartGradient);
-        fill-opacity: 0%;
-    }
 
-    100%
-    {
-        stroke-width: 0;
-        fill: url(#heartGradient);
-        fill-opacity: 100%;
-    }
-
-}
-
-@keyframes bump-heart{
-    0%
-    {
-        stroke: $colorPrimary;
-        transform: scale(0.9);
-    }
-
-    20%
-    {
-        transform: scale(1);
-    }
-
-    40%
-    {
-        transform: scale(0.9);
-    }
-
-    60%
-    {
-        transform: scale(1);
-    }
-
-    100%
-    {
-        stroke: $colorPrimary;
-        transform: scale(1);
-    }
-}
-
-//* Bouton Like : end -----------------------------------
