--- a/css/main.css
+++ b/css/main.css
@@ -33,7 +33,7 @@ img {
 @-webkit-keyframes textNeon {
   0% {
     color: #99E2D0;
-    text-shadow: 0 0 0 1rem #99E2D0;
+    text-shadow: 0 0 15px #99E2D0;
   }
   90% {
     color: #333333;
@@ -41,14 +41,14 @@ img {
   }
   100% {
     color: #99E2D0;
-    text-shadow: 0 0 0 1rem #99E2D0;
+    text-shadow: 0 0 15px #99E2D0;
   }
 }
 
 @keyframes textNeon {
   0% {
     color: #99E2D0;
-    text-shadow: 0 0 0 1rem #99E2D0;
+    text-shadow: 0 0 15px #99E2D0;
   }
   90% {
     color: #333333;
@@ -56,7 +56,7 @@ img {
   }
   100% {
     color: #99E2D0;
-    text-shadow: 0 0 0 1rem #99E2D0;
+    text-shadow: 0 0 15px #99E2D0;
   }
 }
 @-webkit-keyframes endLoader {
@@ -227,36 +227,36 @@ img {
 }
 @-webkit-keyframes fill-heart {
   0% {
-    fill-opacity: 0%;
+    fill-opacity: 0;
   }
   30% {
     stroke-width: 0;
   }
   40% {
     fill: url(#heartGradient);
-    fill-opacity: 0%;
+    fill-opacity: 0;
   }
   100% {
     stroke-width: 0;
     fill: url(#heartGradient);
-    fill-opacity: 100%;
+    fill-opacity: 1;
   }
 }
 @keyframes fill-heart {
   0% {
-    fill-opacity: 0%;
+    fill-opacity: 0;
   }
   30% {
     stroke-width: 0;
   }
   40% {
     fill: url(#heartGradient);
-    fill-opacity: 0%;
+    fill-opacity: 0;
   }
   100% {
     stroke-width: 0;
     fill: url(#heartGradient);
-    fill-opacity: 100%;
+    fill-opacity: 1;
   }
 }
 @-webkit-keyframes bump-heart {
@@ -340,6 +340,7 @@ li {
 }
 
 .btn {
+  display: inline-block;
   border: none;
   border-radius: 1.5rem;
 }
