--- a/scss/secondary.scss
+++ b/scss/secondary.scss
@@ -1,5 +1,3 @@
-// Ajout de tous les imports //
-
 @import "./base/reset";
 @import "./utils/variables";
 @import "./utils/functions";
@@ -12,6 +10,4 @@
 @import "./components/cards";
 @import "./layouts/header";
 @import "./layouts/footer";
-@import "./components/loader";
-@import "./pages/index";
- 
+@import "./pages/pageTypeRestaurant";
