--- a/css/secondary.css
+++ b/css/secondary.css
@@ -627,6 +627,10 @@ footer {
 .restaurant {
   position: relative;
   width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 .restaurant__image {
   width: 100%;
@@ -636,6 +640,11 @@ footer {
   -o-object-position: bottom;
      object-position: bottom;
   margin-bottom: -50px;
+}
+@media screen and (min-width: 768px) {
+  .restaurant__image {
+    max-width: 1200px;
+  }
 }
 .restaurant__menu {
   position: relative;
@@ -649,6 +658,26 @@ footer {
   justify-content: center;
   align-items: center;
 }
+@media screen and (min-width: 420px) {
+  .restaurant__menu {
+    max-width: 550px;
+    border-radius: 2.8rem;
+    margin: 0 auto 3rem auto;
+  }
+}
+@media screen and (min-width: 768px) {
+  .restaurant__menu {
+    max-width: 1100px;
+    height: 550px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: flex-start;
+    flex-wrap: wrap;
+    border-radius: 2.8rem;
+    margin: 0 auto 3rem auto;
+  }
+}
 .restaurant__name {
   width: 100%;
   margin-bottom: 2rem;
@@ -657,7 +686,18 @@ footer {
   justify-content: space-between;
   align-items: center;
 }
+@media screen and (min-width: 420px) {
+  .restaurant__title {
+    width: 100%;
+    text-align: center;
+  }
+}
 .restaurant__order {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   margin: 0.5rem 0 2.5rem 0;
 }
 
@@ -668,6 +708,11 @@ footer {
   justify-content: center;
   align-items: center;
   margin-bottom: 2.5rem;
+}
+@media screen and (min-width: 768px) {
+  .menuPart {
+    width: 31%;
+  }
 }
 .menuPart__name {
   width: 100%;
@@ -680,6 +725,14 @@ footer {
   height: 3px;
   margin-top: 0.5rem;
   background: #99E2D0;
+}
+@media screen and (min-width: 420px) and (max-width: 768px) {
+  .menuPart__name {
+    text-align: center;
+  }
+  .menuPart__name::after {
+    transform: translateX(-21px);
+  }
 }
 
 .dish {
