--- a/scss/pages/_pageTypeRestaurant.scss
+++ b/scss/pages/_pageTypeRestaurant.scss
@@ -2,6 +2,7 @@
 .restaurant{
     position: relative;
     width: 100%;
+    @include flexCol("cen","cen");
 
     &__image{
         width: 100%;
@@ -9,6 +10,11 @@
         object-fit: cover;
         object-position: bottom;
         margin-bottom: -50px;
+        @include tablet-limit{
+            max-width: 1200px;
+            
+        
+        }
     }
     
     &__menu{
@@ -18,16 +24,41 @@
     border-radius: 2.8rem 2.8rem 0 0;
     @include bg_textColor ($colorAdd_light);
     @include flexCol("cen","cen");
+    
+    @include mobile-limit{
+        max-width: 550px;
+        border-radius: 2.8rem;
+        margin: 0 auto 3rem auto;
+    }
+
+    @include tablet-limit{
+        max-width: 1100px;
+        height: 550px;
+        @include flexRow("spE","flexS");
+        flex-wrap: wrap;
+        border-radius: 2.8rem;
+        margin: 0 auto 3rem auto;
+    }
 
     }
 
     &__name{
         width: 100%;
         margin-bottom: 2rem;
-        @include flexRow("spB","cen"); 
+        @include flexRow("spB","cen");
+    }
+
+    &__title{
+        @include mobile-limit{
+            width: 100%;
+            text-align: center;
+        }
     }
     
     &__order{
+        width: 100%;
+        @include flexCol("cen","cen");
+    
         margin: 0.5rem 0 2.5rem 0;
     }
 }
@@ -36,6 +67,10 @@
     width: 100%;
     @include flexCol("cen","cen");
     margin-bottom: 2.5rem;
+
+    @include tablet-limit{
+        width: 31%;
+    }
 
     &__name{
         width: 100%;
@@ -47,6 +82,13 @@
             height: 3px;
             margin-top: 0.5rem;
             background: $colorTertiary;
+        }
+
+        @include tablet-only{
+            text-align: center;
+            &::after{
+                transform:translateX(-21px);
+            }
         }
     }
     
