--- a/scss/utils/_mixins.scss
+++ b/scss/utils/_mixins.scss
@@ -95,6 +95,13 @@
   } 
 }
 
+//For tablet-only
+
+@mixin tablet-only {
+  @media screen and (min-width: map-get($breakpoints, mobile)) and (max-width: map-get($breakpoints, tablet)){
+    @content;
+  }
+}
 //For Desktop
 
 @mixin tablet-limit {
