--- a/css/secondary.css
+++ b/css/secondary.css
@@ -19,10 +19,10 @@ img {
   color: #99E2D0;
 }
 
-.dish, .cardRestaurant, .btn {
+.dish, .btn {
   box-shadow: 0 0.3rem 0.5rem rgba(51, 51, 51, 0.2);
 }
-.dish:hover, .cardRestaurant:hover, .btn:hover {
+.dish:hover, .btn:hover {
   box-shadow: 0 0.4rem 0.5rem rgba(51, 51, 51, 0.3);
 }
 
@@ -476,77 +476,6 @@ li, .menuPart__title {
           animation: bump-heart 0.9s ease-in-out infinite;
 }
 
-.cardRestaurant {
-  width: 90%;
-  max-width: 400px;
-  height: 252px;
-  margin: 0.6rem;
-  border-radius: 0.9rem;
-  overflow: hidden;
-  position: relative;
-  background-color: white;
-  color: #101010;
-  display: flex;
-  flex-direction: column;
-  justify-content: initial;
-  align-items: flex-start;
-}
-@media screen and (min-width: 768px) {
-  .cardRestaurant {
-    width: 40%;
-  }
-}
-@media screen and (min-width: 1200px) {
-  .cardRestaurant {
-    width: 20%;
-  }
-}
-.cardRestaurant:hover {
-  transform: translateY(-3px) scale(1.01);
-}
-.cardRestaurant:active {
-  transform: translate(0, 0rem);
-  box-shadow: none;
-}
-.cardRestaurant--new::before {
-  content: "Nouveau";
-  position: absolute;
-  right: 0.6rem;
-  top: 1rem;
-  width: 80px;
-  height: 30px;
-  font-family: "Roboto", Arial, Helvetica, sans-serif;
-  font-size: 0.9rem;
-  font-weight: 500;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  border-radius: 0.15rem;
-  background-color: #99E2D0;
-  color: #278870;
-}
-.cardRestaurant__image {
-  width: 100%;
-  height: calc(100% - 75px);
-  -o-object-fit: cover;
-     object-fit: cover;
-  -o-object-position: bottom;
-     object-position: bottom;
-}
-.cardRestaurant__info {
-  width: 100%;
-  height: 75px;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-  padding: 0 1.5rem 0 1rem;
-}
-.cardRestaurant__title {
-  margin-bottom: 0.3rem;
-}
-
 header {
   background-color: white;
   color: #101010;
@@ -634,7 +563,7 @@ footer {
 }
 .restaurant__image {
   width: 100%;
-  max-height: 600px;
+  max-height: 500px;
   -o-object-fit: cover;
      object-fit: cover;
   -o-object-position: bottom;
@@ -643,7 +572,8 @@ footer {
 }
 @media screen and (min-width: 768px) {
   .restaurant__image {
-    max-width: 1200px;
+    max-width: 1000px;
+    margin-bottom: -120px;
   }
 }
 .restaurant__menu {
@@ -667,7 +597,7 @@ footer {
 }
 @media screen and (min-width: 768px) {
   .restaurant__menu {
-    max-width: 1100px;
+    max-width: 1300px;
     height: 550px;
     display: flex;
     flex-direction: row;
