--- a/scss/pages/_pageTypeRestaurant.scss
+++ b/scss/pages/_pageTypeRestaurant.scss
@@ -6,39 +6,38 @@
 
     &__image{
         width: 100%;
-        max-height: 600px;
+        max-height: 500px;
         object-fit: cover;
         object-position: bottom;
         margin-bottom: -50px;
         @include tablet-limit{
-            max-width: 1200px;
-            
-        
+            max-width: 1000px;
+            margin-bottom: -120px;
         }
     }
     
     &__menu{
-    position: relative;
-    width: 100%;
-    padding: 1.8rem 1.2rem 1.8rem 1.2rem;
-    border-radius: 2.8rem 2.8rem 0 0;
-    @include bg_textColor ($colorAdd_light);
-    @include flexCol("cen","cen");
-    
-    @include mobile-limit{
-        max-width: 550px;
-        border-radius: 2.8rem;
-        margin: 0 auto 3rem auto;
-    }
+        position: relative;
+        width: 100%;
+        padding: 1.8rem 1.2rem 1.8rem 1.2rem;
+        border-radius: 2.8rem 2.8rem 0 0;
+        @include bg_textColor ($colorAdd_light);
+        @include flexCol("cen","cen");
+        
+        @include mobile-limit{
+            max-width: 550px;
+            border-radius: 2.8rem;
+            margin: 0 auto 3rem auto;
+        }
 
-    @include tablet-limit{
-        max-width: 1100px;
-        height: 550px;
-        @include flexRow("spE","flexS");
-        flex-wrap: wrap;
-        border-radius: 2.8rem;
-        margin: 0 auto 3rem auto;
-    }
+        @include tablet-limit{
+            max-width: 1300px;
+            height: 550px;
+            @include flexRow("spE","flexS");
+            flex-wrap: wrap;
+            border-radius: 2.8rem;
+            margin: 0 auto 3rem auto;
+        }
 
     }
 
@@ -90,8 +89,7 @@
                 transform:translateX(-21px);
             }
         }
-    }
-    
+    } 
 }
 
 .dish{
@@ -161,7 +159,6 @@
         &--amount{
             margin-top:1.6rem;
         }
-    
     }
 
     &__selection{
