--- a/scss/base/_reset.scss
+++ b/scss/base/_reset.scss
@@ -11,4 +11,17 @@ img{
     height:auto;
     max-width:100%;
 }
+
+// Footer always at the end of the page
+body{
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
+main{
+  flex-grow: 1;
+}
+
+// Footer always at the end of the page
  
