--- a/css/secondary.css
+++ b/css/secondary.css
@@ -14,6 +14,16 @@ img {
   max-width: 100%;
 }
 
+body {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
+main {
+  flex-grow: 1;
+}
+
 .endPage__lign a:hover, .mySite__backToMenu:hover {
   transform: scale(1.3);
   color: #99E2D0;
@@ -572,7 +582,7 @@ footer {
 }
 @media screen and (min-width: 768px) {
   .restaurant__image {
-    max-width: 1000px;
+    max-width: 1200px;
     margin-bottom: -120px;
   }
 }
@@ -597,7 +607,7 @@ footer {
 }
 @media screen and (min-width: 768px) {
   .restaurant__menu {
-    max-width: 1300px;
+    max-width: 1200px;
     height: 550px;
     display: flex;
     flex-direction: row;
